# zut-calendar

./: COPYING  README.md  flake.nix  note.md  pyproject.toml  update_lang.sh
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
src/zut_calendar/: __init__.py  api.py  config.py  data.py  io.py  style.tcss  tui.py  utils.py
src/zut_calendar/examples/: config.ini
src/zut_calendar/locales/pl/LC_MESSAGES/: zut_calendar.mo  zut_calendar.po
src/zut_calendar/tui/: __init__.py  app.py  screens.py  style.tcss  widgets.py
