[project]
name = "zut-calendar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Szymon P", email = "szymon_jozef@proton.me" }
]
requires-python = ">=3.13"
dependencies = [
    "appdirs>=1.4.4",
    "requests>=2.32.5",
    "textual>=8.0.1",
    "tzdata>=2025.3 ; sys_platform == 'win32'",
]

[project.scripts]
zut-calendar = "zut_calendar:main"

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"
